# wen_tools

./: .env  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  test.html  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.config.ts.timestamp-1721830395159-d49da050e2fcf.mjs
.github/workflows/: build-android.yaml  build.yaml
dev-dist/: registerSW.js  sw.js  sw.js.map  workbox-5199072c.js  workbox-5199072c.js.map
public/icons/: icon copy.icns  icon.icns
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/utils/: mod.rs
src-tauri/wen/: license.txt  tauri.conf.json
src-tauri/wen/key/android/: upload-keystore.jks  upload-keystore.jks.old
src-tauri/wen/key/up/: wen_tools.key  wen_tools.key.pub
src/assets/: font.css
src/assets/font_icon/: demo_index.html  iconfont.css  iconfont.js  iconfont.json
src/components/: HelloWorld.vue  Welcome.vue  WenMain.vue
src/components/icons/: Icon_xxxxxxx.vue  WenIconsTheme.vue
src/components/icons/siderbutton/: WenIconsSiderButtonElse.vue  WenIconsSiderButtonIf.vue
src/components/icons/sidermenu/: WenIconsSiderMenuGuangyu.vue  WenIconsSiderMenuHome.vue  WenIconsSiderMenuHuodong.vue  WenIconsSiderMenuQuanbu.vue  WenIconsSiderMenuSettings.vue  WenIconsSiderMenuWenjianjia.vue  WenIconsSiderMenuXiangqing.vue
src/components/icons/windows/: WenIconsWindowsClose.vue  WenIconsWindowsMaximize.vue  WenIconsWindowsMinimize.vue
src/components/titlebar/: WenTitlebar.vue  WindowIcon.vue
src/layout/: WenLayout.vue  WenLayoutMain.vue  WenLayoutSider.vue
src/plugins/: assets.ts  customComponents.ts  index.ts  vuetify.ts  windows.ts  windows_action.ts
src/router/: index.ts
src/styles/: base.css
src/types/: auto-imports.d.ts  components.d.ts
src/views/: AboutView.vue  CajianzhuView.vue  FileManagerView.vue  GaishuView.vue  HomeView.vue  SettingsView.vue  WorkplaceView.vue
src/windows/: actions.ts  index.ts
