[package]
name = "wen_tools"
version = "0.0.1"
description = "一个简单的工具箱 & 强大并且实用 || A simple toolbox & Powerful and practical"
authors = ["Su wenmao[xiehuqiqi(github)]"]
license = "suwen_Universal_distribution_protocol"
repository = "https://github.com/xiehuqiqi/wen_tools"
default-run = "wen_tools"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.5", features = ["api-all", "cli", "system-tray"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
